--- a/index.html
+++ b/index.html
@@ -178,7 +178,16 @@
         </div>
     </section>
         -->
-    
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+                new TypeIt('.animado', {
+                    speed: 200,
+                    strings: ["Developer"],
+                    loop: true
+
+                }).go();
+            });
+    </script>
 
 </body>
 
