--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <li style="--deley:4s"><img src="/img/php.png" alt="" width="30px"></li>
                 <li style="--deley:5s"><img src="/img/mysql.png" alt="" width="30px"></li>
                 <li style="--deley:6s"><img src="/img/git.png" alt="" width="30px"></li>
-                <li style="--deley:7s"><img src="/img/github_logo.png" alt="" width="30px"> </li>
+                <li style="--deley:7s"><img src="img/github_logo.png" alt="" width="30px"> </li>
 
             </ul>
         </div>
