--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     </section>
         -->
     <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js" defer></script>
-    <script src="/js/anima.js"></script>
+    <script src="js/anima.js"></script>
 </body>
 
 </html>
