--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="box_2">
 
                 <div class="texto-animado">
-                    <h2>Front-End</h2>
+                    <h2>Evandro Martins</h2>
                     <h2 class="animado-texto"> <span class="animado"></span></h2>
 
 
